--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,11 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  h2 ingrese un vehiculo: 
+  form(action="/ingresar", method="post") 
+    p placa: 
+      input(type="text", name ="placa")  
+    p tipo de vehiculo: 
+      input(type="checkbox", name="tipo")
+    button(type="submit", namespace ="Subir") 
+
