--- a/views/index.jade
+++ b/views/index.jade
@@ -5,3 +5,4 @@ block content
   p Welcome to #{title}
   a(href="/list", class='btn btn-primary') Lista de vehiculos 
   a(href="/entrada", class='btn btn-success') Entrada de vehiculos 
+  a(href="/history", class='btn btn-warning') Historial de vehiculos 
