--- a/views/ingresar.jade
+++ b/views/ingresar.jade
@@ -4,11 +4,13 @@ block content
   h1= title
   h2 ingrese un vehiculo: 
   form(action="/entrada", method="post") 
-    p placa: 
-      input(type="text", name ="placa")  
     p tipo de vehiculo: 
-      select(name="tipo")
-         option(value="") Elegir 
-         option(value="1") Carro 
-         option(value="0") Moto   
+      select(name="tipo", required=true, id='tipo')
+          option(value="") Elegir 
+          option(value="1") Carro 
+          option(value="0") Moto 
+    p placa:   
+      input(type="text", name ="placa", required=true, pattern='[A-Za-z]{3}[0-9]{3}' title='Formato de placa 3 letras 3', id='placa')  
     button(type="submit", namespace ="Subir", class='btn btn-success') Subir 
+  script(src="/javascripts/validation.js") 
+  
