--- a/views/index.jade
+++ b/views/index.jade
@@ -6,3 +6,4 @@ block content
   a(href="/list", class='btn btn-primary') Lista de vehiculos 
   a(href="/entrada", class='btn btn-success') Entrada de vehiculos 
   a(href="/history", class='btn btn-warning') Historial de vehiculos 
+  a(href="/salida", class='btn btn-danger') Salida de vehiculos 
