--- a/views/salida.jade
+++ b/views/salida.jade
@@ -5,6 +5,10 @@ block content
   a(href="/", class='btn btn-danger') Regresar
 
   div
+    p= 'Cupos disponibles: ' + (cupos - count)
+    p= 'Vehiculos activos: ' + count
+
+  div
     table(class='table')
       thead 
         tr
