--- a/views/ingresar.jade
+++ b/views/ingresar.jade
@@ -4,16 +4,32 @@ block content
   h1= title
   a(href="/", class='btn btn-danger') Regresar
   div 
-  p= 'Cupos disponibles: ' + (cupos - count)
-  h2 ingrese un vehiculo: 
+    table(class="table")
+      thead 
+        th Piso
+        th Cupos disponibles 
+        th Vehiculos activos
+      tbody 
+      each cupo, i in cupos
+        tr
+          td= i + 1
+          td= (cupo - (count[i] ? count[i] : 0))
+          td= (count[i] ? count[i] : 0)
   form(action="/entrada", method="post") 
-    p tipo de vehiculo: 
+    p Tipo de vehiculo: 
       select(name="tipo", required=true, id='tipo')
           option(value="") Elegir 
           option(value="1") Carro 
           option(value="0") Moto 
-    p placa:   
-      input(type="text", name ="placa", required=true, pattern='[A-Za-z]{3}[0-9]{3}' title='Formato de placa 3 letras 3 números', id='placa')  
+    p Placa:   
+      input(type="text", name ="placa", required=true, pattern='[A-Za-z]{3}[0-9]{3}' title='Formato de placa 3 letras 3 números', id='placa')
+    p Piso: 
+      select(name="piso", requred=true)
+        option(value=) Elegir
+        option(value="1") Piso 1
+        option(value="2") Piso 2
+        option(value="3") Piso 3
+        option(value="4") Piso 4 
     button(type="submit", namespace ="Subir", class='btn btn-success') Subir 
   script(src="/javascripts/validation.js") 
   
