--- a/views/ingresar.jade
+++ b/views/ingresar.jade
@@ -1,21 +1,84 @@
 extends layout
 
 block content
-  h1= title
-  a(href="/", class='btn btn-danger') Regresar
-  div 
-    table(class="table")
-      thead 
-        th Piso
-        th Cupos disponibles 
-        th Vehiculos activos
+  .barra-superior
+    h1= "Parking UR"
+
+  //Enlace atras
+  .enlace   
+    c.btn.btn-atras(href="/index", class='btn btn-primary') « 
+
+  .table-Tentrada
+    table.tabla-redondeada
+      thead
+        tr 
+          th Entrada 
       tbody 
-      each cupo, i in cupos
         tr
-          td= i + 1
-          td= (cupo - (count[i] ? count[i] : 0))
-          td= (count[i] ? count[i] : 0)
-  form(action="/entrada", method="post") 
+          td 
+            //Botones Carro Moto
+            b.btn.btn-car(data-vehiculo="Carro") Carro
+            b.btn.btn-bike(data-vehiculo="Moto") Moto
+
+            //Entrada de dueño
+            .label-input-dueno
+                label.label-dueno Dueño:
+                input#dueno-input(type="text", placeholder="")
+
+            //Entrada de placa
+            .label-input-placa
+              label.label-placa Placa:
+              input#placa-input(type="text", placeholder="", maxlength="6") 
+
+            //Entrada de color
+            .label-input-color
+                label.label-color Color:
+                input#color-input(type="text", placeholder="")
+
+            //Entrada de piso
+            .label-select-piso
+                label.label-piso Piso:
+                select#piso-select
+                  option(value="1") Piso 1
+                  option(value="2") Piso 2
+                  option(value="3") Piso 3
+                  option(value="4") Piso 4
+                  option(value="5") Piso 5
+
+            //Boton de Guardar
+            button#btn-guardar(type="button") Subir
+
+              
+
+  .table-pisos 
+    table.tabla-redond 
+      thead 
+        tr 
+          th Cupos
+      tbody 
+        tr 
+          td 
+            .label-label-piso1  
+              label.label-piso1 Piso 1:
+        tr 
+          td
+            .label-label-piso2  
+              label.label-piso1 Piso 2:
+        tr 
+          td
+            .label-label-piso3  
+              label.label-piso1 Piso 3:
+        tr  
+          td 
+            .label-label-piso4  
+              label.label-piso1 Piso 4:
+        tr 
+          td
+            .label-label-piso5  
+              label.label-piso1 Piso 5:
+
+
+  //form(action="/entrada", method="post") 
     p Tipo de vehiculo: 
       select(name="tipo", required=true, id='tipo')
           option(value="") Elegir 
@@ -23,13 +86,8 @@ block content
           option(value="0") Moto 
     p Placa:   
       input(type="text", name ="placa", required=true, pattern='[A-Za-z]{3}[0-9]{3}' title='Formato de placa 3 letras 3 números', id='placa')
-    p Piso: 
-      select(name="piso", requred=true)
-        option(value=) Elegir
-        option(value="1") Piso 1
-        option(value="2") Piso 2
-        option(value="3") Piso 3
-        option(value="4") Piso 4 
     button(type="submit", namespace ="Subir", class='btn btn-success') Subir 
   script(src="/javascripts/validation.js") 
+  script(src="/javascripts/selection.js")
+  script(src="/javascripts/validation1.js") 
   
