--- a/views/ingresar.jade
+++ b/views/ingresar.jade
@@ -5,50 +5,62 @@ block content
     h1= "Parking UR"
 
   //Enlace atras
-  .enlace   
-    c.btn.btn-atras(href="/index", class='btn btn-primary') « 
+  .enlace
+    a(href="/")   
+      c.btn.btn-atras(class='btn btn-primary') « 
+  form(action="/entrada", method="post", id="formulario") 
+    .table-Tentrada
+      table.tabla-redondeada
+        thead
+          tr 
+            th Entrada 
+        tbody 
+          tr
+            td 
+              //Botones Carro Moto
+              input(type="radio", name="tipo", id="inputCarro", value="Carro", hidden, required)
+              label(for="inputCarro") 
+                b.btn.btn-car(data-vehiculo="Carro") Carro
+              input(type="radio", name="tipo", id="inputMoto", value="Moto", hidden, required)
+              label(for="inputMoto") 
+                b.btn.btn-bike(data-vehiculo="Moto") Moto
 
-  .table-Tentrada
-    table.tabla-redondeada
-      thead
-        tr 
-          th Entrada 
-      tbody 
-        tr
-          td 
-            //Botones Carro Moto
-            b.btn.btn-car(data-vehiculo="Carro") Carro
-            b.btn.btn-bike(data-vehiculo="Moto") Moto
+              //Entrada de dueño
+              .label-input-dueno
+                  label.label-dueno Dueño:
+                  input#dueno-input(type="text", placeholder="", name="owner", required)
 
-            //Entrada de dueño
-            .label-input-dueno
-                label.label-dueno Dueño:
-                input#dueno-input(type="text", placeholder="")
+              //Entrada de placa
+              .label-input-placa
+                label.label-placa Placa:
+                input#placa-input(type="text", name="placa", required,  pattern='[A-Za-z]{3}[0-9]{3}', title='Formato de placa 3 letras 3 números') 
 
-            //Entrada de placa
-            .label-input-placa
-              label.label-placa Placa:
-              input#placa-input(type="text", placeholder="", maxlength="6") 
+              //Entrada de color
+              .label-input-color
+                  label.label-color Color:
+                  input#color-input(type="text", placeholder="", name="color", required)
 
-            //Entrada de color
-            .label-input-color
-                label.label-color Color:
-                input#color-input(type="text", placeholder="")
+              //Entrada de piso
+              .label-select-piso
+                  label.label-piso Piso:
+                  select#piso-select(name="floor", required)
+                    option(value="1") Piso 1
+                    option(value="2") Piso 2
+                    option(value="3") Piso 3
+                    option(value="4") Piso 4
+                    option(value="5") Piso 5
 
-            //Entrada de piso
-            .label-select-piso
-                label.label-piso Piso:
-                select#piso-select
-                  option(value="1") Piso 1
-                  option(value="2") Piso 2
-                  option(value="3") Piso 3
-                  option(value="4") Piso 4
-                  option(value="5") Piso 5
+              //Boton de Guardar
+              button#btn-guardar(type="submit") Subir
 
-            //Boton de Guardar
-            button#btn-guardar(type="button") Subir
 
-              
+  div(id="modal_container")
+    div#modal
+      p ¿Ingresar vehiculo?
+      div.btn
+        button.btn(id='rechazar_btn') Rechazar 
+        button.btn(id='aceptar_btn') Aceptar
+
 
   .table-pisos 
     table.tabla-redond 
@@ -89,5 +101,5 @@ block content
     button(type="submit", namespace ="Subir", class='btn btn-success') Subir 
   script(src="/javascripts/validation.js") 
   script(src="/javascripts/selection.js")
-  script(src="/javascripts/validation1.js") 
+  script(src="/javascripts/confirmation.js") 
   
