Añadiendo confirmaciones y validaciones[

--- a/views/list.jade
+++ b/views/list.jade
@@ -21,6 +21,8 @@ block content
     thead 
       tr
         th Placa
+        th Dueño
+        th Color
         th Tipo 
         th Piso
         th Hora entrada
@@ -28,6 +30,8 @@ block content
       each document in documentos 
         tr 
           td= document.placa 
+          td= document.owner 
+          td= document.color
           if document.tipo
             td Carro 
           else 
