--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -487,3 +487,11 @@ c.btn:hover{
 #modal .btn button:hover {
   cursor: pointer;
 }
+
+/* Mensaje de error */
+.error_message {
+  text-align: center;
+  background-color: var(--color-boton3);
+  top: 0;
+
+}
