--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -232,6 +232,11 @@ table.tabla-redondeada2{
   border: 1px solid var(--color-fondo-titulo);
 }
 
+tbody td
+{
+  color: var(--color-boton1);
+}
+
 .tabla-Tsalida th:nth-child(1) { width: 10%; } 
 .tabla-Tsalida th:nth-child(2) { width: 40%; } 
 .tabla-Tsalida th:nth-child(3) { width: 10; } 
@@ -579,6 +584,7 @@ c.btn:hover{
 }
 
 #modal .btn button:hover {
+  background-color: var(--color-boton3);
   cursor: pointer;
 }
 
@@ -588,3 +594,20 @@ c.btn:hover{
   background-color: var(--color-boton3);
   top: 0;
 }
+
+.btn_salida {
+  background-color: var(--color-boton4);
+  border-radius: 15px;
+  color: var(--color-titulo);
+  border: none;
+  padding: 7px 15px;
+  font-size: larger;
+  margin-left: 50%;
+  transform: translate(-50%, 0);
+}
+
+.btn_salida:hover {
+  background-color: var(--color-boton3);
+  cursor: pointer;
+}
+
