--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,8 +1,9 @@
 doctype html
 html
   head
-    title= title
+    title= "Parking UR"
     //link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel="shortcut icon", href="/imagenes/logo.png", type="image/x-icon")
   body
     block content
