--- a/views/ingresar.jade
+++ b/views/ingresar.jade
@@ -104,8 +104,9 @@ block content
     div#modal
       p ¿Ingresar vehiculo?
       div.btn
-        button.btn(id='rechazar_btn') Rechazar 
-        button.btn(id='aceptar_btn') Aceptar
+        button.btn-aceptar(id='aceptar_btn') Aceptar
+        button.btn-rechazar(id='rechazar_btn') Rechazar 
+        
 
   script(src="/javascripts/validation.js") 
   script(src="/javascripts/selection.js")
