--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -66,11 +66,11 @@ a.btn:hover{
 }
 
 .moto_entrada{
-  position: relative;
+  position: fixed;
   width: 200px;
   height: 170px;
-  top: -105px;
-  right: -470px;
+  top: 370px;
+  left: 885px;
   pointer-events: none;
 }
 
@@ -83,11 +83,11 @@ a.btn:hover{
 }
 
 .carro_entrada{
-  position: relative;
+  position: fixed;
   width: 250px;
   height: 250px;
-  top: -60px;
-  left: 165px;
+  top: 340px;
+  left: 320px;
   pointer-events: none;
 }
 
@@ -107,8 +107,8 @@ a.btn:hover{
   font-size: 2.5em;
   justify-content: flex-end;
   align-items: flex-end;
-  top: 20%;
-  left: 22%;
+  top: 191px;
+  left: 413px;
   padding: 20px;
   width: 525px;
   height: 292px;
@@ -125,8 +125,8 @@ a.btn:hover{
   font-size: 2.5em;
   justify-content: flex-end;
   align-items: flex-end;
-  top: 20%;
-  right: 22%;
+  top: 191px;
+  left: 941px;
   width: 525px;
   height: 291px;
 }
@@ -143,7 +143,8 @@ a.btn:hover{
   font-size: 2.5em;
   justify-content: flex-end;
   align-items: flex-end;
-  bottom: 19%;
+  top: 486px;
+  left: 676px;
   padding: 20px;
   width: 525px;
   height: 292px;
@@ -158,8 +159,8 @@ a.btn:hover{
   font-size: 2em;
   padding: 10px;
   width: 200px;
-  bottom: 20px;
-  right: 20px;
+  top: 870px;
+  left: 1655px;
 }
 
 .enlaces .btn-history {
@@ -170,7 +171,7 @@ a.btn:hover{
   position: fixed;
   width: 136px;
   height: 124px;
-  bottom: 20px;
+  top: 825px;
   left: 20px;
 }
 
@@ -229,7 +230,7 @@ table.tabla-redondeada2{
 }
 
 .tabla-Tsalida th, .tabla-Tsalida td{
-  border: 1px solid var(--color-fondo-titulo);
+  border: 1px solid #9A002A;
 }
 
 tbody td
@@ -257,7 +258,7 @@ table.tabla-redondeada3{
 }
 
 .tabla-Tlista th, .tabla-Tlista td{
-  border: 1px solid var(--color-fondo-titulo);
+  border: 1px solid #9A002A;
 }
 
 .tabla-Tlista th:nth-child(1) { width: 10%; } 
@@ -279,7 +280,7 @@ table.tabla-redondeada4{
 }
 
 .tabla-Thistorial th, .tabla-Thistorial td{
-  border: 1px solid var(--color-fondo-titulo);
+  border: 1px solid #9A002A;
 }
 
 .tabla-Thistorial th:nth-child(1) { width: 10%; } 
@@ -330,7 +331,7 @@ b.btn.seleccionado{
   align-items: flex-end;
   top: 330px;
   left: 250px;
-  padding: 20px;
+  padding: 15px;
   width: 400px;
   height: 200px;
 }
@@ -344,15 +345,16 @@ b.btn.seleccionado{
   align-items: flex-end;
   top: 330px;
   left: 785px;
-  padding: 20px;
+  padding: 10px;
   width: 400px;
   height: 200px;
 } 
 
 .label-input-dueno{
-  display: flex;
+  display: fixed;
   gap: 10px;
-  margin-top: -100px;
+  margin-top: 170px;
+  margin-left: 300px;
   justify-content: center;
 }
 
@@ -375,9 +377,10 @@ b.btn.seleccionado{
 }
 
 .label-input-placa{
-  display: flex;
+  display: fixed;
   gap: 10px;
   margin-top: 10px;
+  margin-left: 400px;
   justify-content: center;
 }
 
@@ -400,9 +403,10 @@ b.btn.seleccionado{
 }
 
 .label-input-color{
-  display: flex;
+  display: fixed;
   gap: 10px;
   margin-top: 10px;
+  margin-left: 400px;
   justify-content: center;
 }
 
@@ -425,17 +429,18 @@ b.btn.seleccionado{
 }
 
 .label-select-piso{
-  display: flex;
+  display: fixed;
   gap: 10px;
   margin-top: 10px;
+  margin-left: 455px;
   justify-content: center;
 }
 
 .label-select-piso::after{
   content: '▲'; 
   position: absolute;
-  margin-left: 180px;
-  margin-top: 15px;
+  margin-left: -17px;
+  margin-top: 18px;
   font-size: 12px;
   color: #333;
   pointer-events: none; 
@@ -556,7 +561,7 @@ c.btn:hover{
 }
 
 #modal {
-  border: 3px solid var(--color-boton4);
+  border: 5px solid var(--color-boton4);
   border-radius: 15px;
   width: 30%;
   height: 20%;
@@ -565,6 +570,8 @@ c.btn:hover{
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: var(--color-fondo);
+  font-size: 1.5em;
+  font-weight: bold;
   color: black;
   text-align: center;
 }
@@ -579,6 +586,7 @@ c.btn:hover{
   border: none;
   font-size: 100%;
   border-radius: 15px;
+  top: 50px;
   padding: 10px;
   margin: 10%;
 }
@@ -591,6 +599,7 @@ c.btn:hover{
 /* Mensaje de error */
 .error_message {
   text-align: center;
+  height: 30px;
   background-color: var(--color-boton3);
   top: 0;
 }
